# wally

./: AUTHORS  CMakeLists.txt  ChangeLog  DISCLAIMER  README  README.XFCE4  README.shortcuts  TODO
debian/: changelog  control  wally.desktop  wally.install
debian-kde/: control  copyright  docs  rules  wally.menu  watch
include/: about.h  bing.h  buzznet.h  defs.h  deviantart.h  diskinfo.h  engine.h  exif.h  files.h  flickr.h  folders.h  google.h  gui.h  history.h  httpengine.h  idcache.h  ipernity.h  json.h  mapviewer.h  networkmanager.h  networkmanager_p.h  panoramio.h  photobucket.h  picasa.h  pikeo.h  settings.h  smugmug.h  splash.h  utils.h  version.h  viewer.h  vladstudio.h  wally.h  xtengine.h  yahoo.h
mac/: Info.plist  wally.icns  wally.pmproj
nsis/: License_Disclaimer.txt  wally.nsi
res/: languages.qrc  wally.rc
res/lang/: wally_ca.ts  wally_cz.ts  wally_de.ts  wally_dk.ts  wally_es.ts  wally_fr.ts  wally_gr.ts  wally_hu.ts  wally_it.ts  wally_kr.ts  wally_pl.ts  wally_pt_BR.ts  wally_ru.ts  wally_se.ts  wally_tr.ts  wally_zh_CN.ts  wally_zh_TW.ts
src/: about.cpp  bing.cpp  buzznet.cpp  deviantart.cpp  diskinfo.cpp  engine.cpp  files.cpp  flickr.cpp  folders.cpp  google.cpp  gui.cpp  history.cpp  httpengine.cpp  ipernity.cpp  json.cpp  main.cpp  mapviewer.cpp  networkmanager.cpp  panoramio.cpp  photobucket.cpp  picasa.cpp  pikeo.cpp  settings.cpp  smugmug.cpp  splash.cpp  utils.cpp  viewer.cpp  vladstudio.cpp  wally.cpp  xtengine.cpp  yahoo.cpp
ui/: about.ui  files.ui  folders.ui  http.ui  settings.ui  viewer.ui
wallyplugin/: CMakeLists.txt  plasma-wallpaper-wallyplugin.desktop  wallyplugin.cpp  wallyplugin.h  wallypluginexport.h
